<resources>
    <string name="app_name">TFS android</string>
    <string name="plus_add_description">Картинка добавление плюсика</string>
    <string name="nickname_textview">Darrell Steward</string>
    <string name="message_textview">Привет! lorem ipsum test message dalshe zabil</string>
    <string name="avatar_description">Test image</string>
    <string name="write_hint_text">Написать…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plank_for_bottom_sheet_dialog">Plank for bottom sheet dialog</string>
    <string name="streams_fragment_name">Streams</string>
    <string name="people_fragment_name">People</string>
    <string name="profile_fragment_name">Profile</string>
    <string name="logout_button_text">Log out</string>
    <string name="user_online_text">online</string>
    <string name="user_offline_text">offline</string>
    <string name="user_idle_text">idle</string>
    <string name="stream_header">#%s</string>
    <string name="search_title">Search</string>
    <string name="message_topic_header">Topic: #%s</string>
    <string name="tab_is_selected">Tab is selected</string>
    <string name="tab_is_unselected">Tab is unselected</string>
    <string name="tab_is_reselected">Tab is reselected</string>
    <string name="subscribed_header">Subscribed</string>
    <string name="all_streams_header">All streams</string>
    <string name="error_tab_layout">Error Tab layout</string>
    <string name="debug_fragment_recreated">Fragment recreated.</string>
    <string name="debug_view_recreated">View recreated.</string>
    <string name="error_streams_loading">Error happened during loading streams. Try again.</string>
    <string name="error_people_loading">Error happened during loading contacts. Try again.</string>
    <string name="error_messages_loading">Error happened during loading topics messages. Try again.</string>
    <string name="error_message_sending">Error happened during sending message. Try again.</string>
    <string name="error_profile_loading">Error during loading user profile. Try again.</string>
    <string name="error_reaction_updating">Error during updating a reaction. Try again.</string>
    <string name="profile_name_text">Darrel Steward</string>
    <string name="profile_email_text">darrels@gmail.com</string>
    <string name="call_user_status">In a meeting</string>
    <string name="error_filtering_data">Error during filtering data.</string>
    <string name="refresh">refresh</string>
</resources>