<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_profile">

    <fragment
        android:id="@+id/navigation_people"
        android:name="com.example.tinkoff.ui.fragments.people.PeopleFragment"
        android:label="@string/people_fragment_name"
        tools:layout="@layout/fragment_people" >
        <action
            android:id="@+id/action_navigation_people_to_navigation_other_profile"
            app:destination="@id/navigation_other_profile" />
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.tinkoff.ui.fragments.profile.ProfileFragment"
        android:label="@string/profile_fragment_name"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_stream_tabs"
        android:name="com.example.tinkoff.ui.fragments.streamTabs.StreamsTabsFragment"
        android:label="@string/streams_fragment_name" />
    <fragment
        android:id="@+id/navigation_other_profile"
        android:name="com.example.tinkoff.ui.fragments.profile.ProfileFragment"
        android:label="Other people"
        tools:layout="@layout/fragment_profile" >
        <argument
            android:name="user"
            app:argType="com.example.tinkoff.data.classes.User" />
    </fragment>
</navigation>